Increased performance